--- a/ObjCTodosList/Base.lproj/Main.storyboard
+++ b/ObjCTodosList/Base.lproj/Main.storyboard
@@ -65,9 +65,18 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nvb-pw-Md9">
-                                <rect key="frame" x="25" y="253" width="343" height="40"/>
+                                <rect key="frame" x="25" y="270" width="343" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="2Si-9J-Cko"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EMH-bs-feI">
+                                <rect key="frame" x="25" y="335" width="343" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="qxZ-WY-9zP"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <nil key="textColor"/>
@@ -77,8 +86,11 @@
                         <viewLayoutGuide key="safeArea" id="Mmv-ns-UVN"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="EMH-bs-feI" firstAttribute="leading" secondItem="Mmv-ns-UVN" secondAttribute="leading" constant="25" id="JJg-CG-xNI"/>
+                            <constraint firstItem="Mmv-ns-UVN" firstAttribute="trailing" secondItem="EMH-bs-feI" secondAttribute="trailing" constant="25" id="SVf-qf-6Kr"/>
+                            <constraint firstItem="EMH-bs-feI" firstAttribute="top" secondItem="nvb-pw-Md9" secondAttribute="bottom" constant="25" id="V5M-Do-9lB"/>
                             <constraint firstItem="Mmv-ns-UVN" firstAttribute="trailing" secondItem="nvb-pw-Md9" secondAttribute="trailing" constant="25" id="ZV8-y5-Aqo"/>
-                            <constraint firstItem="nvb-pw-Md9" firstAttribute="top" secondItem="M0r-vG-o3P" secondAttribute="bottom" constant="8" id="cJY-W7-kWP"/>
+                            <constraint firstItem="nvb-pw-Md9" firstAttribute="top" secondItem="M0r-vG-o3P" secondAttribute="bottom" constant="25" id="cJY-W7-kWP"/>
                             <constraint firstItem="M0r-vG-o3P" firstAttribute="top" secondItem="Mmv-ns-UVN" secondAttribute="top" constant="40" id="ku0-rq-WOJ"/>
                             <constraint firstItem="M0r-vG-o3P" firstAttribute="leading" secondItem="Mmv-ns-UVN" secondAttribute="leading" constant="25" id="sqE-cg-bb0"/>
                             <constraint firstItem="Mmv-ns-UVN" firstAttribute="trailing" secondItem="M0r-vG-o3P" secondAttribute="trailing" constant="25" id="t8W-Ob-KNj"/>
@@ -87,6 +99,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="VFR-cc-WKs"/>
                     <connections>
+                        <outlet property="textLabel" destination="EMH-bs-feI" id="PEh-T2-MtC"/>
                         <outlet property="todoLabel" destination="nvb-pw-Md9" id="Ay3-Aw-QCa"/>
                     </connections>
                 </viewController>
